Fix spacing and sizing for Spotlight images

--- a/src/components/Spotlight.css
+++ b/src/components/Spotlight.css
@@ -7,6 +7,7 @@
 }
 .Spotlight .image {
 	width: 12em;
+	margin-bottom: 1em;
 }
 .Spotlight.right .image {
 	margin-left: 2em;
@@ -27,7 +28,21 @@
 		display: flex;
 		align-items: center;
 	}
+	/* .Spotlight .image {
+		width: 12em;
+	} */
+}
+
+@media screen and (min-width: 736px) {
 	.Spotlight .image {
-		width: 19em;
+			width: 19em;
+			margin: 0 1.75em 2em 0;
+	}
+}
+
+@media screen and (min-width: 980px) {
+	.Spotlight .image {
+		margin: 0 2em 2em 0;
+		width: 32em;
 	}
 }
